# guru-agents

./: .env.development  CLAUDE.md  PLAN.md  README.md  pyproject.toml  railway.json
.claude/: settings.json
.claude/commands/: alert.md  spark.md
docs/: development-and-deployment-guide.md  multi-user-architecture.md  spawn-explanation.md
scripts/: postinstall.js
src/: lark.py  main.py  prompt.py  topic.py  utils.py
src/services/: claude-process-manager.ts
src/types/: config.ts
test/: DEBUG_SUMMARY.md  test.py  test_all_url_formats.py  test_image_upload.py  test_json_string_input.py  test_lark_tool.py
